--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -4,11 +4,11 @@
       = current_user.name
     %ul.header__lists
       %li.list
-        = link_to '#' do
+        = link_to new_group_path do
           = fa_icon 'pencil-square-o', class: 'icon'
       %li.list
         = link_to edit_user_path(current_user) do
-        = fa_icon 'cog', class: 'icon'
+          = fa_icon 'cog', class: 'icon'
   .groups
     .group
       .group__name
@@ -25,3 +25,4 @@
         グループ名
       .group__message
         新着メッセージ
+
