APIと非同期通信の実装 initial version
initial version

--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -19,14 +19,14 @@
           .group__message
             = group.show_last_message         
             
-    .group
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
-    .group
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
+    -# .group
+    -#   .group__name
+    -#     グループ名
+    -#   .group__message
+    -#     新着メッセージ
+    -# .group
+    -#   .group__name
+    -#     グループ名
+    -#   .group__message
+    -#     新着メッセージ
 
