--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -1,5 +1,8 @@
+*{
+  box-sizing: border-box;
+}
 .chat {
-  width: calc(100% - 300px);
+  width: calc(100vw - 300px);
   .header {
     box-sizing: border-box;
     height: 100px;
@@ -37,7 +40,8 @@
     background-color: #FAFAFA;
     box-sizing: border-box;
     padding: 46px 40px 0;
-    height: calc(100% - 100px - 90px);
+    height: calc(100vh - 100px - 90px);
+    overflow: scroll;
     .message {
       .upper-message {
         display: flex;
