--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -15,7 +15,7 @@
             メンバー名
       .right-header
         .right-header__button
-          Edit
+          = link_to "Edit", edit_group_path(@group)
     .messages
       .message
         .upper-message
@@ -35,7 +35,7 @@
       
     .form
       = form_for [@group, @message] do |f|
-        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message', id: 'new_message'
         .form__mask
           = f.label :image, class: 'form__mask__image' do
             = fa_icon 'picture-o', class: 'icon'
