--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -77,6 +77,8 @@
       float: left;
       height: 50px;
       width: calc(100% - 150px);
+      font-size: 20px;
+      padding-left: 10px;
     }
     &__mask {
       background-color: $white;
