--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,9 +1,9 @@
-.message
+.message{data: {id: "#{message.id}"}}
   .upper-message
     .upper-message__user-name
       = message.user.name
     .upper-message__date
-      = message.created_at{date.to_s}
+      = message.created_at
   .lower-message
     - if message.content.present?
       %p.lower-message__content
