--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -4,9 +4,10 @@
 .chat {
   width: calc(100vw - 300px);
   .header {
-    box-sizing: border-box;
     height: 100px;
     padding: 0 40px;
+    display:flex;
+    justify-content:space-between;
     .left-header {
       float: left;
       &__title {
@@ -71,7 +72,8 @@
     background-color: #DDDDDD;
     box-sizing: border-box;
     height: 90px;
-    padding: 20px 50px 20px 40px;
+    padding: 20px 40px 20px 40px;
+    
     &__message {
       border: none;
       float: left;
@@ -79,6 +81,8 @@
       width: calc(100% - 150px);
       font-size: 20px;
       padding-left: 10px;
+      display:flex;
+      justify-content:space-between;
     }
     &__mask {
       background-color: $white;
